--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# generate files
+ibmpublickey.txt
+textfiles.go
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
